--- a/agenda.html
+++ b/agenda.html
@@ -41,7 +41,7 @@
 
     <section class="economy">
       <div class="sm_heading">
-        To position Nigeria as a leading financial centre in Africa.
+        To position Nigeria as a leading financial center in Africa.
       </div>
       <div class="md_heading">
         “We aim to advance this agenda by actively collaborating with our
@@ -90,7 +90,7 @@
                   style="color: #40ba7b"
                   data-width="26"
                 ></span
-                >International Trade & Investment.
+                >International Trade & Investment
               </li>
               <li>
                 <span
@@ -99,7 +99,7 @@
                   style="color: #40ba7b"
                   data-width="26"
                 ></span
-                >Regionalization.
+                >Regionalization
               </li>
               <li>
                 <span
@@ -189,8 +189,7 @@
         <div class="membership_text">
           <div class="text">
             Join our network of members at the forefront of advancing the
-            development and transformation of Nigeria’s Financial and
-            Professional Services (FPS) Sector.
+            development and transformation of Nigeria.
           </div>
           <a href="/member.html"
             ><button class="md_btn">
@@ -280,7 +279,7 @@
         <div class="sm_heading">KEEP UP TO DATE</div>
         <div class="md_heading">Latest News</div>
         <div class="thin">
-          The latest news from EnterpriseNGR and the financial services sector.
+          The latest news from EnterpriseNGR and the FPS sector.
         </div>
         <div class="cards">
           <!-- <div class="card">
@@ -333,9 +332,8 @@
           <div>Voice of Enterprise</div>
         </div>
         <div class="thin">
-          Annual EnterpriseNGR event to engage key industry stakeholders (both
-          globally and in Nigeria) as well as policymakers at all levels of
-          government.
+          An annual event that brings together key Nigerian and global industry
+          stakeholders and policy makers from all levels of government
         </div>
         <a href="/greenstart.html"
           ><button class="md_btn">
@@ -351,7 +349,7 @@
       </div>
       <div class="green">
         <div>JOIN NOW</div>
-        <div class="md_heading">Monthly Newsletter</div>
+        <div class="md_heading">Monthly E-Newsletter</div>
         <form action="">
           <input type="email" placeholder="Enter your email address" />
           <button class="md_btn">
